Homework 7: Add integration test plus some refactors
