# user.management/src/main/java/ro/agilehub/javacourse/car/hire/user/controller/mapper/UserDTOMapper.java
@@ -9,11 +9,12 @@ import ro.agilehub.javacourse.car.hire.user.service.mapper.ObjectIdMapper;
 public interface UserDTOMapper {
 
     @Mapping(target = "id", source = "userDO.id")
-    @Mapping(target = "country", source = "userDO.country.name")
+    @Mapping(target = "country.id", expression = "java(userCountryDO.getId().toString())")
+    @Mapping(target = "country.name", source = "userDO.country.name")
+    @Mapping(target = "country.isoCode", source = "userDO.country.isoCode")
     UserDTO toUserDTO(UserDO userDO);
 
     @Mapping(target = "id", source = "userDTO.id")
-    @Mapping(target = "country", ignore = true)
     UserDO toUserDO(UserDTO userDTO);
 }
 
